Bug 163948 - Crash upon startup after enabling Notes Pane
Summary: Crash upon startup after enabling Notes Pane
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Sarper Akdemir (allotropia)
URL:
Whiteboard: target:25.2.0 target:24.8.5 target:24...
Keywords: bibisected, bisected
Depends on:
Blocks: Notes-View
  Show dependency treegraph
 
Reported: 2024-11-18 11:39 UTC by Gabor Kelemen (Collabora)
Modified: 2025-04-17 03:10 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2024-11-18 11:39:26 UTC
1. Open Impress
2. View - Notes Pane
3. View - User Interface
4. Choose Tabbed, press Apply to Impress, Close
5. Restart Impress -> Crash

Seems to have started with

https://git.libreoffice.org/core/+/3d99cc908365a27f275ae8f221958a8282e668fc

author	Xisco Fauli <xiscofauli@libreoffice.org>	Fri Sep 06 12:16:37 2024 +0200
committer	Xisco Fauli <xiscofauli@libreoffice.org>	Fri Sep 06 15:21:34 2024 +0200
tree 3292f184ab331986a0639948d1011e1512002464
parent 3f3da299e54a78efd01f952f410cebe2bc67a77e [diff]

tdf#162467: fix measurement units in impress/draw
Comment 1 Sarper Akdemir (allotropia) 2024-11-18 12:00:42 UTC
I can confirm this on master 3aecdee689cdf49815d55c9c7935805d51ea7c53

Had a look at the problem my findings so far are:

- Tabbed interface triggers an early dispatch command.
- During that time BottomImpressPane shell is on the top of the shell stack.
  BottomImpressPane shell is a pure anchor / non-functional shell, it shouldn't be
  on the top of the stack.
- It is unable to handle the dispatch command -> crash.

On ConfigurationUpdater::UpdateCore, after the call to
ConfigurationUpdater::CheckPureAnchors - the pure anchor shells are supposed to
be deactivated and removed from the stack IIUC.
- when run with SAL_INFO="+WARN+INFO.fwk" it is reported the shell is
  successfully deactivated.
  - I might be misunderstanding the meaning of shell `deactivation`, maybe it is
    not the same as being removed from the stack, but something seems off here.
Comment 2 Sarper Akdemir (allotropia) 2024-11-18 12:03:07 UTC
(In reply to Sarper Akdemir (allotropia) from comment #1)
> be deactivated and removed from the stack IIUC.
> - when run with SAL_INFO="+WARN+INFO.fwk" it is reported the shell is
>   successfully deactivated.
... but the shell is still on the stack and attempts to handle the dispatch command.
Comment 3 Xisco Faulí 2024-11-18 12:36:39 UTC
I'm not sure the issue is caused by the commit mentioned. If 9d075157ccf3e9468b5208291e398a9d7e4728b8 is reverted, then the issue is not happening
Comment 4 Julien Nabet 2024-11-19 09:20:13 UTC
On pc Debian x86-64 with master sources updated today, I don't reproduce this.

I just noticed these on console:
warn:vcl.builder:45056:45056:vcl/source/window/builder.cxx:3160: probably need to implement NotebookBarAddonsMenuMergePoint
warn:vcl:45056:45056:vcl/source/window/builder.cxx:760: missing elements of button/menu
warn:sal.file:45056:45056:sal/osl/unx/file_misc.cxx:659: Invalid file URL
warn:sal.file:45056:45056:sal/osl/unx/file_misc.cxx:659: Invalid file URL
warn:vcl.builder:45056:45056:vcl/source/window/builder.cxx:3160: probably need to implement NotebookBarAddonsMenuMergePoint
warn:vcl:45056:45056:vcl/source/window/builder.cxx:760: missing elements of button/menu
Comment 5 Commit Notification 2024-12-02 14:47:10 UTC
Sarper Akdemir committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ae281b51456196246a5b21929f6624bf6c030294

tdf#163948: fix crash when NotesPane is enabled on Tabbed UI

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2024-12-03 02:05:11 UTC
Sarper Akdemir committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/379857ddce35cf20d489a05e7aed73fb61d6cbf6

tdf#163948: fix crash when NotesPane is enabled on Tabbed UI

It will be available in 24.8.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2024-12-12 18:28:41 UTC
Sarper Akdemir committed a patch related to this issue.
It has been pushed to "libreoffice-24-8-4":

https://git.libreoffice.org/core/commit/f0551cd1ad33cc115a29353d14d9d510613bfe39

tdf#163948: fix crash when NotesPane is enabled on Tabbed UI

It will be available in 24.8.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 deltahansen 2025-04-17 03:10:07 UTC Comment hidden (spam)